# OpenGL_enderer

./: .gitmodules  CMakeLists.txt  main.cpp  planning.txt  shader.frag  shader.vert  sprite.cpp  sprite.hpp  to-do.txt
src/: buffer.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  util.hpp  vertexArray.cpp  window.cpp  window.hpp
src/GL/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  elementBuffer.cpp  elementBuffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexArray.cpp  vertexArray.hpp
src/models/: mesh.cpp  mesh.hpp  sprite.cpp  sprite.hpp
src/shader/: shader.frag  shader.vert
